added more css and fixed flexbox problems.

--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
     </nav>
     
     <section id="about-me">
+        <div id="h2">
         <h2>About Me</h2>
+        </div>
         <br>
         <div id="my-info">
-        <p>This is my portfolio site. I am attending the UNC Coding Bootcamp. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quasi dolores doloremque necessitatibus iusto iure fuga recusandae nulla quam error quisquam nesciunt magnam consequuntur veniam, optio eaque placeat exercitationem debitis praesentium eveniet labore? Beatae recusandae accusantium, mollitia dolor suscipit ea.</p>
         <img src="./assets/IMG_1695.png" alt="Image of Hannah in a maroon shirt, smiling.">
+        <p>This is my portfolio site. I am attending the UNC Coding Bootcamp. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quasi dolores doloremque necessitatibus iusto iure fuga recusandae nulla quam error quisquam nesciunt magnam consequuntur veniam, optio eaque placeat exercitationem debitis praesentium eveniet labore? Beatae recusandae accusantium, mollitia dolor suscipit ea. Aut quasi dolores doloremque necessitatibus iusto iure fuga recusandae nulla quam error quisquam nesciunt magnam consequuntur veniam, optio eaque placeat exercitationem debitis praesentium eveniet labore? Beatae recusandae accusantium, mollitia dolor suscipit ea.</p>
         </div>
     </section>
     
@@ -36,15 +38,20 @@
         <h2>My Work</h2>
         <br>
         <div id="work-images">
-        <img src="https://picsum.photos/425/200" alt="Placeholder image.">
-        <img src="https://picsum.photos/200" alt="Placeholder image.">
-        <img src="https://picsum.photos/200" alt="Placeholder image.">
-        <img src="https://picsum.photos/200" alt="Placeholder image.">
+       <img src="https://picsum.photos/800/275" alt="Placeholder image.">
+           <div id="smaller-images">
+           <img src="https://picsum.photos/190/200" alt="Placeholder image.">
+           <img src="https://picsum.photos/190/200" alt="Placeholder image.">
+           <img src="https://picsum.photos/190/200" alt="Placeholder image.">
+           <img src="https://picsum.photos/190/200" alt="Placeholder image.">
+
+           </div>
         </div>
     </section>
 
     <footer id="contact-me">
         <h2>Contact Me</h2>
+        <br>
       <form>
         <label for="name">Name:</label><br>
         <input type="text" id="name" name="name"><br>
