fixed flexbox errors and spacing in html and css

--- a/index.html
+++ b/index.html
@@ -36,20 +36,34 @@
     
     <section id="my-work">
         <h2>My Work</h2>
-        <br>
-        <div id="work-images">
-       <img src="https://picsum.photos/800/275" alt="Placeholder image.">
-           <div id="smaller-images">
-           <img src="https://picsum.photos/190/200" alt="Placeholder image.">
-           <img src="https://picsum.photos/190/200" alt="Placeholder image.">
-           <img src="https://picsum.photos/190/200" alt="Placeholder image.">
-           <img src="https://picsum.photos/190/200" alt="Placeholder image.">
+      <div class="container-1">
+        <a href="https://www.google.com/">
+          <img src="https://picsum.photos/800/275" alt="Placeholder image." style="width:100%;">
+          <div class="bottom-left">Project 1</div>
+        </a>
+      </div>
+      <div class="container-2">
+        <a href="https://www.google.com/">
+        <img src="https://picsum.photos/190/200" alt="Placeholder image." style="width:100%">
+        <div class="bottom-left">Project 2</div>
+        </a>
+      </div>
+      <div class="container-3">
+        <a href="https://www.google.com/">
+        <img src="https://picsum.photos/190/200" alt="Placeholder image." style="width:100%;">
+        <div class="bottom-left">Project 3</div>
+        </a>
+      </div>
+      <div class="container-3">
+        <a href="https://www.google.com/">
+        <img src="https://picsum.photos/190/200" alt="Placeholder image." style="width:100%;">
+        <div class="bottom-left">Project 4</div>
+        </a>
+      </div>
 
-           </div>
-        </div>
     </section>
 
-    <footer id="contact-me">
+    <footer>
         <h2>Contact Me</h2>
         <br>
       <form>
