Added project 1 link and fixed flex

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <br>
         <div id="my-info">
-        <img src="./assets/IMG_1695.png" alt="Image of Hannah in a maroon shirt, smiling.">
+        <img src="./assets/IMG_1695.png" alt="Hannah in a maroon shirt, smiling.">
         <p>This is my portfolio site. I am attending the UNC Coding Bootcamp. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quasi dolores doloremque necessitatibus iusto iure fuga recusandae nulla quam error quisquam nesciunt magnam consequuntur veniam, optio eaque placeat exercitationem debitis praesentium eveniet labore? Beatae recusandae accusantium, mollitia dolor suscipit ea. Aut quasi dolores doloremque necessitatibus iusto iure fuga recusandae nulla quam error quisquam nesciunt magnam consequuntur veniam, optio eaque placeat exercitationem debitis praesentium eveniet labore? Beatae recusandae accusantium, mollitia dolor suscipit ea.</p>
         </div>
     </section>
@@ -37,9 +37,9 @@
     <section id="my-work">
         <h2>My Work</h2>
       <div class="container-1">
-        <a href="https://www.google.com/">
-          <img src="https://picsum.photos/800/275" alt="Placeholder image." style="width:100%;">
-          <div class="bottom-left">Project 1</div>
+        <a href="https://acarter867.github.io/Entertained/">
+          <img src="./assets/Screen Shot 2023-01-22 at 10.59.16 AM.png" alt="Entertained screenshot" style="width:100%;">
+          <div class="bottom-left">Entertained App</div>
         </a>
       </div>
       <div class="container-2">
