Added links and images to project section

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
         <h2>My Work</h2>
       <div class="container-1">
         <a href="https://acarter867.github.io/Entertained/">
-          <img src="./assets/Screen Shot 2023-01-22 at 10.59.16 AM.png" alt="Entertained screenshot" style="width:100%;">
+          <img src="./assets/Screen Shot 2023-03-26 at 5.00.32 PM.png" alt="Entertained screenshot" style="width:100%;">
           <div class="bottom-left">Entertained App</div>
         </a>
       </div>
       <div class="container-2">
-        <a href="https://www.google.com/">
-        <img src="https://picsum.photos/190/200" alt="Placeholder image." style="width:100%">
+        <a href="https://hot-or-not-pets-edition.herokuapp.com/homepage">
+        <img src="./assets/pexels-cong-h-1404819-2.jpg" alt="Cat" style="width:100%">
         <div class="bottom-left">Project 2</div>
         </a>
       </div>
