Added 3rd project

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
       <div class="container-2">
         <a href="https://hot-or-not-pets-edition.herokuapp.com/homepage">
         <img src="./assets/pexels-cong-h-1404819-2.jpg" alt="Cat" style="width:100%">
-        <div class="bottom-left">Project 2</div>
+        <div class="bottom-left">Cats Off To Ya!</div> 
         </a>
       </div>
       <div class="container-3">
         <a href="https://www.google.com/">
-        <img src="https://picsum.photos/190/200" alt="Placeholder image." style="width:100%;">
+        <img src="./assets/Screen Shot 2023-05-17 at 1.21.56 PM.png" alt="Evently App screenshot" style="width:100%;">
         <div class="bottom-left">Project 3</div>
         </a>
       </div>
