Added link to evently

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         </a>
       </div>
       <div class="container-3">
-        <a href="https://www.google.com/">
+        <a href="https://evently-app.herokuapp.com">
         <img src="./assets/Screen Shot 2023-05-17 at 1.21.56 PM.png" alt="Evently App screenshot" style="width:100%;">
-        <div class="bottom-left">Project 3</div>
+        <div class="bottom-left">Evently App</div>
         </a>
       </div>
       <div class="container-3">
